# icartt-explorer

client/: package-lock.json  package.json
client/src/: App.js  Map.css  Map.js
server/: pyproject.toml
server/server/: app.py  test.ipynb  utils.py
server/server/static/: asset-manifest.json  index.html
server/server/static/static/js/: main.e3df5645.js  main.e3df5645.js.map
