[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["joepalmo <joepalmo7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.3"
pandas = "^2.1.0"
numpy = "^1.25.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
